--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
   </head>
   <body lang="en">
     <section id="main">
-      < headerid="title">
-        <h1>>John Doe</h1>
-        <span class="subtitle">>Plaintiff, defendant &amp; witness</span>
+      <header id="title">
+        <h1>John Doe</h1>
+        <span class="subtitle">Plaintiff, defendant &amp; witness</span>
       </header>
-      < sectionclass="main-block">
+      <section class="main-block">
         <h2>
-          <i class="fa fa-suitcase">></i>> Experiences
+          <i class="fa fa-suitcase"></i> Experiences
         </h2>
-        < sectionclass="blocks">
+        <section class="blocks">
           <div class="date">
-            <span>>2015</span>><span>>present</span>
+            <span>2015</span><span>present</span>
           </div>
           <div class="decorator">
           </div>
           <div class="details">
             <header>
-              <h3>>Some Position</h3>
+              <h3>Some Position</h3>
               <span class="place">Some Workplace</span>
               <span class="location">(remote)</span>
             </header>
@@ -57,7 +57,7 @@
             </div>
           </div>
         </section>
-        < sectionclass="blocks">
+        <section class="blocks">
           <div class="date">
             <span>2013</span><span>2014</span>
           </div>
@@ -82,7 +82,7 @@
         <h2>
           <i class="fa fa-folder-open"></i> Selected Projects
         </h2>
-        < sectionclass="blocks">
+        <section class="blocks">
           <div class="date">
             <span>2015</span><span>2016</span>
           </div>
