--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h1>John Doe</h1>
         <span class="subtitle">Plaintiff, defendant &amp; witness</span>
       </header>
+	<td style="vertical-align:middle;text-align:right;">
+                    <img src="../img/foto.JPG">
+                </td>
       <section class="main-block">
         <h2>
           <i class="fa fa-suitcase"></i> Experiences
