--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name">Java Online Projects</h3>
           <h4 class="resume-item-details" itemprop="description">Стажировка Spring 5/JPA Enterprise &bull; Январь 2021 &mdash; май 2021</h4>
-          <p class="resume-item-copy">Участви в разработке Spring/JPA Enterprise приложения c авторизацией и правами доступа на основе ролей на стеке Maven/ Spring MVC/ Security/ REST(Jackson)/ Java 8 Stream API: 
+          <p class="resume-item-copy">Участие в разработке Spring/JPA Enterprise приложения c авторизацией и правами доступа на основе ролей на стеке Maven/ Spring MVC/ Security/ REST(Jackson)/ Java 8 Stream API: 
 		  <br><br>
 		  <li>реализация сохранения в базы Postgres и HSQLDB на основе Spring JBDC, JPA(Hibernate) и Spring-Data-JPA</li> 
 		  <li>реализация и тестирование REST и AJAX контроллеров</li> 
@@ -210,14 +210,14 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
           <p class="resume-item-copy">Технический контроль и инженерно - геодезическое сопровождение объектов строительства, включая: 
 		  <br><br> 
 		  <li>Исполнительные съемки с применением современного геодезического и спутникового оборудования</li> 
-		  <li>Программная математическа обработка результатов измерений</li> 
+		  <li>Программная математическая обработка результатов измерений</li> 
 		  <li>Cоставление исполнительной документации с применением прикладных программных комплексов</li></p>
         </div><!-- end of resume-item -->
         
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name">ООО "СУ11"</h3>
           <h4 class="resume-item-details" itemprop="description">Инженер - геодезист &bull; Март 2015 &mdash; Октябрь 2016</h4>
-          <p class="resume-item-copy">Выполнение комплекса инженерно - топографических работ для создания крупномасштабных топографических планов, а также геодезическое сопровождение объекта, включая
+          <p class="resume-item-copy">Выполнение комплекса инженерно - топографических работ для создания крупномасштабных топографических планов, а также геодезическое сопровождение объекта, включая:
 		  <br><br> 
 		  <li>Подготовку трехмерных динамических моделей строящихся объектов на основе проектных данных с использованием систем автоматизированоого проектирования (САПР)</li> 
 		  <li>Использование построенных моделей для автоматизации геодезических работ</li> </p>
@@ -236,25 +236,31 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
         <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <h3 class="resume-item-title" itemprop="name"><a href='https://github.com/DmitryShvyryaev/LunchVote'>Cистема принятия решения - в каком ресторане пообедать</a></h3>
           <h4 class="resume-item-details" itemprop="description">Архитектор / программист  &bull; 2021</h4>
-          <p class="resume-item-copy">Полнофункциональное Web - приложение с REST - интерфейсом для принятия решения о том, в каком ресторане пообедать с авторизацией и правами доступа. <br>Стек ключевых инструментов / технологий / программных средств: Java, Spring (MVC, Security, Data JPA), Hibernate, REST(Jackson), JUnit 5, HSQLDB, IntelliJ IDEA, Maven, Git, Tomcat</p>
+          <p class="resume-item-copy">
+		  <li>Полнофункциональное Web - приложение с REST - интерфейсом для принятия решения о том, в каком ресторане пообедать с авторизацией и правами доступа.</li> 
+		  <li>Стек ключевых инструментов / технологий / программных средств: Java, Spring (MVC, Security, Data JPA), Hibernate, REST(Jackson), JUnit 5, HSQLDB, IntelliJ IDEA, Maven, Git, Tomcat</li></p>
         </div>
 		
 		<div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <h3 class="resume-item-title" itemprop="name"><a href='https://github.com/DmitryShvyryaev/UserSurvey'>Система опроса пользователей</a></h3>
           <h4 class="resume-item-details" itemprop="description">Архитектор / программист  &bull; 2021</h4>
-          <p class="resume-item-copy">Web - приложение опроса пользователей с REST - интерфейсом. <br>Стек ключевых инструментов / технологий / программных средств: Java, Spring (MVC, Security, Data JPA), Hibernate, REST(Jackson), JUnit 5, HSQLDB, IntelliJ IDEA, Maven, Git, Tomcat</p>
+          <p class="resume-item-copy"><li>Web - приложение опроса пользователей с REST - интерфейсом.</li> 
+		  <li>Стек ключевых инструментов / технологий / программных средств: Java, Spring (MVC, Security, Data JPA), Hibernate, REST(Jackson), JUnit 5, HSQLDB, IntelliJ IDEA, Maven, Git, Tomcat</li></p>
         </div>
         
         <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/DmitryShvyryaev/topjava" itemprop="url">Подсчет калорий</a></h3>
           <h4 class="resume-item-details" itemprop="description">Программист  &bull; 2021</h4>
-          <p class="resume-item-copy">Проект размещен в облачном сервисе <a href='https://topjava-shvyryaev.herokuapp.com/'>Heroku.</a><br>Web - приложение для учета количества калорий с авторизацией и правами доступа.<br>Стек ключевых инструментов / технологий / программных средств: Java 8 (Stream, Time API), Spring (MVC, Security, Data JPA), Hibernate, Servlet, JSP/JSTL, REST(Jackson), AJAX, JUnit 5, JavaScript, Bootstrap, jQuery + plugins, PostgreSQL, HSQLDB, IntelliJ IDEA, Maven, Git, Tomcat, Heroku</p>
+          <p class="resume-item-copy">Проект размещен в облачном сервисе <a href='https://topjava-shvyryaev.herokuapp.com/'>Heroku.</a>
+		  <br>
+		  <li>Web - приложение для учета количества калорий с авторизацией и правами доступа.</li>
+		  <li>Стек ключевых инструментов / технологий / программных средств: Java 8 (Stream, Time API), Spring (MVC, Security, Data JPA), Hibernate, Servlet, JSP/JSTL, REST(Jackson), AJAX, JUnit 5, JavaScript, Bootstrap, jQuery + plugins, PostgreSQL, HSQLDB, IntelliJ IDEA, Maven, Git, Tomcat, Heroku</li></p>
         </div>
 		
 		<div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/DmitryShvyryaev/ChessV2.0" itemprop="url">Шахматы</a></h3>
           <h4 class="resume-item-details" itemprop="description">Архитектор / программист  &bull; 2020</h4>
-          <p class="resume-item-copy">Desctop - приложение для игры в шахматы с использованием Java / Java Swing</p>
+          <p class="resume-item-copy"><li>Desctop - приложение для игры в шахматы с использованием Java / Java Swing</li></p>
         </div>
 
       </section>
