--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
 		<div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
           <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/DmitryShvyryaev/ChessV2.0" itemprop="url">Шахматы</a></h3>
           <h4 class="resume-item-details" itemprop="description">Архитектор / программист  &bull; 2020</h4>
-          <p class="resume-item-copy"><li>Desctop - приложение для игры в шахматы с использованием Java / Java Swing</li></p>
+          <p class="resume-item-copy"><li>Desktop - приложение для игры в шахматы с использованием Java / Java Swing</li></p>
         </div>
 
       </section>
