--- a/index.html
+++ b/index.html
@@ -304,6 +304,25 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
       </section>
       <!-- end Associations -->
 	  
+	  <!-- begin Interests -->
+      <section class="content-section"> 
+
+        <header class="section-header">
+          <h2>О себе </h2>
+        </header>
+
+        <div class="resume-item">
+          <ul class="resume-item-list">
+            
+            <li>Главная цель: стать квалифицированным, качественным специалистом в IT сфере, получить должность Java-разработчика в команде профессионалов с интересными проектами. Продолжаю активно изучать Java - технологии и совершенствоваться.</li>
+			<li> Сильные стороны: аналитический склад ума, логическое мышление, сильный интерес к изучению новых технологий и способность к самообучению без наставника.</li>
+            
+          </ul>
+        </div>
+
+      </section>
+      <!-- end Interests -->
+	  
       <!-- begin Print Social Links -->
       <section class="content-section print-only">
 
