--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
         </div>
 		
 		<div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-          <h3 class="resume-item-title" itemprop="name"><a href='https://github.com/DmitryShvyryaev/UserSurvey'>Система опроса пользователей</a></h3>
+          <h3 class="resume-item-title" itemprop="name"><a href='https://github.com/DmitryShvyryaev/users-survey'>Система опроса пользователей</a></h3>
           <h4 class="resume-item-details" itemprop="description">Архитектор / программист  &bull; 2021</h4>
           <p class="resume-item-copy"><li>Web - приложение опроса пользователей с REST - интерфейсом.</li> 
 		  <li>Стек ключевых инструментов / технологий / программных средств: Java, Spring (MVC, Security, Data JPA), Hibernate, REST(Jackson), JUnit 5, HSQLDB, IntelliJ IDEA, Maven, Git, Tomcat</li></p>
@@ -258,7 +258,7 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
         </div>
 		
 		<div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-          <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/DmitryShvyryaev/ChessV2.0" itemprop="url">Шахматы</a></h3>
+          <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/DmitryShvyryaev/chess-time" itemprop="url">Шахматы</a></h3>
           <h4 class="resume-item-details" itemprop="description">Архитектор / программист  &bull; 2020</h4>
           <p class="resume-item-copy"><li>Desktop - приложение для игры в шахматы с использованием Java / Java Swing</li></p>
         </div>
