--- a/index.html
+++ b/index.html
@@ -271,12 +271,19 @@ viewBox="0 0 500 500" enable-background="new 0 0 500 500" preserveAspectRatio="x
         <header class="section-header">
           <h2>Высшее образование</h2>
         </header>
+		
+		<div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h6 class="resume-item-title" itemprop="name">Институт переподготовки и повышения квалификации ВИАКАДЕМИЯ</h6>
+          <p class="resume-item-details group" itemprop="description">Enterprise Java - разработчик</p>
+
+          <p class="resume-item-copy">Диплом о профессиональной переподготовке &bull; 2021</p>
+        </div>
         
         <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
           <h6 class="resume-item-title" itemprop="name">Московский Государственный университет геодезиии картографии (МИИГАиК)</h6>
-          <p class="resume-item-details group" itemprop="description">Прикладная геодезия &bull; 2013</p>
+          <p class="resume-item-details group" itemprop="description">Прикладная геодезия</p>
 
-          <p class="resume-item-copy">Высшее, Геодезический факультет</p>
+          <p class="resume-item-copy">Высшее &bull; Геодезический факультет &bull; 2013</p>
         </div>
         
       </section>
